--- a/ios/Runner/Base.lproj/LaunchScreen.storyboard
+++ b/ios/Runner/Base.lproj/LaunchScreen.storyboard
@@ -22,10 +22,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImage" translatesAutoresizingMaskIntoConstraints="NO" id="yaf-J1-Lwg">
-                                <rect key="frame" x="0.0" y="142" width="375" height="383"/>
+                                <rect key="frame" x="87" y="233" width="200" height="200"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="383" id="lsC-a8-R6U"/>
-                                    <constraint firstAttribute="width" constant="375" id="x1i-0U-eoI"/>
+                                    <constraint firstAttribute="height" constant="200" id="nQo-sU-B97"/>
+                                    <constraint firstAttribute="width" constant="200" id="sKV-p0-RYk"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -42,6 +42,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="LaunchImage" width="250" height="250"/>
+        <image name="LaunchImage" width="100" height="100"/>
     </resources>
 </document>
